# expression_templates_for_matrices

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
data/: matrix_samples.txt
include/: concepts.h  matrix.h  matrix.tpp  matrix_base.h  matrix_base.tpp  matrix_ops.h
include/analysis/: determinant.h  lu_decompose.h  norms.h
include/expressions/: add_expr.tpp  elementwise_expr.h  elementwise_ops.h  matrix_ops.h  mult_expr.h  mult_expr.tpp  scalar_mult_expr.h  scalar_mult_expr.tpp  sub_expr.tpp  transpose_expr.h  transpose_expr.tpp
include/matrices/: diagonal_matrix.h  identity_matrix.h  matrix.h  zero_matrix.h
src/: main.cpp
src/matrices/: identity_matrix.cpp  zero_matrix.cpp
tests/: test_analysis.cpp  test_infrastructure.cpp  test_matrix.cpp  test_matrix_expressions.cpp
